--- a/src/app/components/collaborators/collaborators.component.scss
+++ b/src/app/components/collaborators/collaborators.component.scss
@@ -6,3 +6,10 @@
 .button-background{
     background-color: #EEEEEE
 }
+element.style {
+    margin-left: -40px;
+}
+// coloimg {
+//     margin-left: -40px;
+//     opacity: 0.7
+// }
