--- a/src/app/components/take-note/take-note.component.html
+++ b/src/app/components/take-note/take-note.component.html
@@ -53,29 +53,32 @@
 
     <!-- mat chip  reminder-->
 
-    <!-- <div  fxLayout="row" fxLayout="row wrap">
-        <mat-chip-list class="chip">
+    <div fxLayout="row" fxLayout="row wrap">
+      <div *ngFor="let item of reminder">
+        <mat-chip-list>
 
           <div *ngIf="(todaydate | date: 'shortDate') == (array.reminder | date: 'shortDate') && (array.reminder!='')">
-            <mat-chip >Today {{array.reminder | date:'shortTime'}}
+            <mat-chip>Today {{array.reminder | date:'shortTime'}}
               <mat-icon matChipRemove (click)="removeReminder(array)">cancel</mat-icon>
             </mat-chip>
           </div>
 
           <div *ngIf="(tomorrow | date: 'shortDate') == (array.reminder | date: 'shortDate') && (array.reminder!='')">
-              <mat-chip>Tomorrow {{array.reminder | date:'shortTime'}}
-                <mat-icon matChipRemove (click)="removeReminder(array)">cancel</mat-icon>
-              </mat-chip>
-            </div>
+            <mat-chip>Tomorrow {{array.reminder | date:'shortTime'}}
+              <mat-icon matChipRemove (click)="removeReminder(array)">cancel</mat-icon>
+            </mat-chip>
+          </div>
 
-            <div *ngIf="(tomorrow | date: 'shortDate') != (array.reminder | date: 'shortDate') && (todaydate | date: 'shortDate') != (array.reminder | date: 'shortDate') && (array.reminder!='') ">
-                <mat-chip>{{array.reminder | date:'medium'}}
-                  <mat-icon matChipRemove (click)="removeReminder(array)">cancel</mat-icon>
-                </mat-chip>
-              </div>
-  
+          <div
+            *ngIf="(tomorrow | date: 'shortDate') != (array.reminder | date: 'shortDate') && (todaydate | date: 'shortDate') != (array.reminder | date: 'shortDate') && (array.reminder!='') ">
+            <mat-chip>{{array.reminder | date:'medium'}}
+              <mat-icon matChipRemove (click)="removeReminder(array)">cancel</mat-icon>
+            </mat-chip>
+          </div>
+
         </mat-chip-list>
-    </div> -->
+      </div>
+    </div>
 
     <!-- icon -->
 
