--- a/src/app/components/collaborators/collaborators.component.html
+++ b/src/app/components/collaborators/collaborators.component.html
@@ -26,15 +26,70 @@
     </div>
   </div>
 
-  <!-- ************************************ To share Notes with other user *********************************** -->
+  <!-- ************************************ To display users collaborated to notes *********************************** -->
+  <br>
+  <div fxLayout="row">
+    <div fxFlex='10'>
+      <button mat-mini-fab style="background-color:bisque" fxLayoutAlign="center center">
+        <img src="../../../assets/image/colo.svg">
+      </button>
+    </div>
+    <div fxLayout="column" fxFlex='85'>
+      <div>
+        user name
+      </div>
+      <div>
+        email
+      </div>
+
+    </div>
+    <button mat-icon-button (click)="removeCollaborators()"><img src="../../../assets/image/close.svg" alt=""></button>
+
+  </div>
+
+  <!-- <div  *ngFor='let array of data.card.collaborators' fxLayout='row'>
+      <div fxFlex='10'>
+          <button mat-mini-fab>
+              <img src='../../../assets/images/addnote.svg'>
+            </button>
+      </div>
+      <div fxLayout='column' fxFlex='85'>
+       <div> {{array.firstName}} {{array.lastName}}</div>
+          <div>{{array.email}}</div>
+        </div>
+        <img src='../../../assets/images/wrong_mark.svg' (click)='removeColaborator(data.card.id,array)'>
+    </div><br>
+   -->
+
+
+  <!-- <div fxLayout='row'>
+      <div fxFlex='10'>
+        <button mat-mini-fab>
+          <img src='../../../assets/images/addnote.svg'>
+        </button>
+      </div>
+      <div fxFlex='85' fxLayout='row'>
+        <input matInput [(ngModel)]='colaborator' (click)='revFlag()' (keyup)='searchForList(colaborator)' placeholder="enter email here"
+          [matMenuTriggerFor]='menu'>
+  
+        <img *ngIf='flag==false' src='../../../assets/images/right_mark.svg' (click)='addColaborator(data.card.id)'>
+      </div>
+    </div>
+    <mat-menu #menu="matMenu">
+      <div *ngFor='let array of userList'>
+        <div (click)='details(array)' (keydown)='enter($event,data.card.id)' >{{array.email}}</div>
+      </div>
+    </mat-menu>
+    <br><br><br> -->
+
 
   <br>
-
-
   <div fxLayout="row">
 
     <div fxFlex="10">
-      <button mat-mini-fab fxLayout="row" style="background-color:bisque" fxLayoutAlign="end center">
+      <button mat-mini-fab fxLayout="row" style="background-color:bisque" fxLayoutAlign="center center">
+        <img class="coloimg" src="../../../assets/image/colo.svg">
+
       </button>
     </div>
 
@@ -60,7 +115,7 @@
   <br>
 
   <div class="button-background">
-    <div class="button" fxLayout="row"  fxLayoutGap="5%">
+    <div class="button" fxLayout="row" fxLayoutGap="5%">
       <button mat-button [mat-dialog-close] fxLayoutGap="5%">Cancel</button>
       <button mat-button (click)="saveUser()" fxLayoutGap="5%">Save</button>
     </div>
