--- a/src/app/components/labels/labels.component.html
+++ b/src/app/components/labels/labels.component.html
@@ -1,1 +1,1 @@
-<app-displaynote fxLayout="{{layout}}" [cards]="arrayCard"></app-displaynote>
+<app-displaynote fxLayout="{{layout}}" [cards]="arrayCard" [cards]="cards"></app-displaynote>
