--- a/src/app/components/iconlist/iconlist.component.html
+++ b/src/app/components/iconlist/iconlist.component.html
@@ -13,7 +13,7 @@
   </mat-menu>
 
   <!-- Collaborator icon -->
-  <button id="coll" mat-icon-button matTooltip="Collaborator" (click)="openCollaborators()">
+  <button id="coll" mat-icon-button matTooltip="Collaborator" (click)="openCollaborators(card)">
     <img id="img" src="../../../assets/image/outline-person_add-24px.svg" />
   </button>
 
