Fundoo Project Completed

--- a/src/app/components/archive/archive.component.html
+++ b/src/app/components/archive/archive.component.html
@@ -1,4 +1,4 @@
 
 
-<app-displaynote  [cards]="archivedCard" [archived]='more' fxLayout="{{layout}}" fxLayout="row wrap" ></app-displaynote>
+<app-displaynote   [archived]='more' fxLayout="{{layout}}" fxLayout="row wrap" ></app-displaynote>
 
