--- a/src/app/components/collaborators/collaborators.component.scss
+++ b/src/app/components/collaborators/collaborators.component.scss
@@ -13,3 +13,8 @@ element.style {
 //     margin-left: -40px;
 //     opacity: 0.7
 // }
+
+.collablist{
+    background-image: url("../../../assets/image/Profile-512.png");
+    background-size: cover
+}
