--- a/src/app/components/displaynote/displaynote.component.html
+++ b/src/app/components/displaynote/displaynote.component.html
@@ -1,6 +1,19 @@
-<div *ngFor="let array of cards | search: Search" fxLayout="row wrap" fxLayoutAlign="start center" fxLayout.xs="column" >
-  <mat-card [style.backgroundColor]="array.color" fxFlex.xs="100" fxLayout="column" class="matcard" fxFlex="45"
-    fxFlexOffset.xl="10" cdkDropList (cdkDropListDropped)="drop($event)">
+<!-- <div cdkDropList (cdkDropListDropped)="drop($event)">
+      <div *ngFor="let array of cards">
+        <mat-card [style.backgroundColor]="array.color" fxLayout="row rap" class="matcard" cdkDrag>
+    
+        </mat-card>
+    
+      </div>
+    
+    </div> -->
+
+
+
+<div *ngFor="let array of cards | search: Search" fxLayout="row wrap" fxLayoutAlign="start center" fxLayout.xs="column"
+  cdkDropList (cdkDropListDropped)="drop($event)"  >
+  <mat-card     [style.backgroundColor]="array.color" fxFlex.xs="100" fxLayout="column" class="matcard" fxFlex="45"
+    fxFlexOffset.xl="10" cdkDrag>
     <div fxFlex="55" fxFlexOffset.xl="20" fxFlex.xs="97" fxLayout="row" fxLayoutAlign="start center">
       <div fxLayout="column" fxFlex="100">
         <div fxLayout="row" fxLayoutAlign="space-between start" fxFlex="100">
@@ -82,7 +95,7 @@
 
     <!-- Collaborators -->
 
-    
+
 
     <!-- <div>
       <button mat-mini-fab style="background-color: sandybrown ">
@@ -113,4 +126,3 @@
     </div>
   </mat-card>
 </div>
-
